3865.	[test]		Improved testability of the red-black tree
			implementation and added unit tests. [RT #35904]

3864.	[bug]		RPZ didn't work well when being used as forwarder.
			[RT #36060]

3863.	[bug]		The "E" flag was missing from the query log as a
			unintended side effect of code rearrangement to
			support EDNS EXPIRE. [RT #36117]

3862.	[cleanup]	Return immediately if we are not going to log the
			message in ns_client_dumpmessage.

3861.	[security]	Missing isc_buffer_availablelength check results
			in a REQUIRE assertion when printing out a packet
			(CVE-2014-3859).  [RT #36078]

3860.	[bug]		ioctl(DP_POLL) array size needs to be determined
			at run time as it is limited to {OPEN_MAX}.
			[RT #35878]

3859.	[placeholder]

3858.	[bug]		Disable GCC 4.9 "delete null pointer check".
			[RT #35968]

3857.	[bug]		Make it harder for a incorrect NOEDNS classification
			to be made. [RT #36020]

3856.	[bug]		Configuring libjson without also configuring libxml
			resulted in a REQUIRE assertion when retrieving
			statistics using json. [RT #36009]

3855.	[bug]		Limit smoothed round trip time aging to no more than
			once a second. [RT #32909]

3854.	[cleanup]	Report unrecognized options, if any, in the final
			configure summary. [RT #36014]

3853.	[cleanup]	Refactor dns_rdataslab_fromrdataset to separate out
			the handling of a rdataset with no records. [RT #35968]

3852.	[func]		Increase the default number of clients available
			for servicing lightweight resolver queries, and
			make them configurable via the "lwres-tasks" and
			"lwres-clients" options.  (Thanks to Tomas Hozza.)
			[RT #35857]

3851.	[func]		Allow libseccomp based system-call filtering
			on Linux; use "configure --enable-seccomp" to
			turn it on.  Thanks to Loganaden Velvindron
			of AFRINIC for the contribution. [RT #35347]

3850.	[bug]		Disabling forwarding could trigger a REQUIRE assertion.
			[RT #35979]

3849.	[doc]		Alphabetized dig's +options. [RT #35992]
